<resources>
    <string name="app_name">CasualLove</string>

    <!-- LoginActivity -->
    <string name="casuallove">CasualLove </string>
    <string name="nombre_usuario">Nombre del Usuario </string>
    <string name="password_usuario">Contraseña del Usuario </string>
    <string name="iniciar_sesion">Iniciar Sesión </string>
    <string name="registrarse">Registrarse </string>

    <!-- RegistrarseActivity -->
    <string name="registro">Registro </string>
    <string name="nombre">Nombre </string>
    <string name="apellidos">Apellidos </string>
    <string name="nickname">Nickname </string>
    <string name="correo_electronico">Correo Electrónico </string>
    <string name="password_usuario_confirmacion">Confirmacion Contraseña del Usuario </string>
    <string name="siguiente">Siguiente</string>
    <string name="password_no_coincide">Las contraseñas no coinciden</string>

    <!-- RegistrarseActivity2 -->
    <string name="fecha_nacimiento">Fecha de Nacimiento </string>
    <string name="direccion">Dirección </string>

    <!-- AficionesActivity    -->
    <string name="adiciones">Aficiones </string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="phone">Telefono</string>
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmarContraseña">Confirmar Contraseña</string>
    <string name="cine">Cine</string>
    <string name="videojuegos">Videojuegos</string>
    <string name="musica">Música</string>
    <string name="pintura">Pintura</string>
    <string name="comics">Cómics</string>
    <string name="literaura">Literatura</string>
    <string name="deporte">Deporte</string>
    <string name="fiesta">Fiesta</string>
    <string name="otros">Otros </string>
    <string name="escribe_aficion">Escribe afición </string>
    <string name="hello_blank_fragment">hola</string>
    <string name="creado_correctamente">Creado correctamente</string>
    <string name="trastioname_picture">transitionnamepicture</string>
    <string name="editar">Editar</string>
    <string name="test">esto es un test</string>
    <string name="cerrarSesion">Cerrar Sesion</string>

    <string name="perfil">Perfil</string>


</resources>