<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_fondo_login"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/llText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casuallove"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/black_text"
                android:layout_gravity="center"
                android:background="@drawable/bt_redondo"
                android:layout_marginBottom="250dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_usuario"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:textColor="@color/black_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_usuario"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:inputType="textPassword"
                android:textColor="@color/black_text"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llText"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/iniciar_sesion"
            android:layout_marginRight="5dp"
            android:background="@drawable/bt_redondo_morado"
            />
        <Button
            android:onClick="onClickIrRegistrarse"
            android:id="@+id/btRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/registrarse"
            android:layout_marginLeft="5dp"
            android:background="@drawable/bt_redondo_morado"

            />
    </LinearLayout>


</RelativeLayout>