<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_fondo_login"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/llText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black_text"
                android:layout_gravity="center"
                android:background="@drawable/bt_redondo"
                android:layout_marginBottom="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/llText"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nombre"
                    android:textSize="20sp"
                    android:textColor="@color/black_text"
                    android:background="@drawable/bt_redondo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/apellidos"
                    android:textSize="20sp"
                    android:textColor="@color/black_text"
                    android:background="@drawable/bt_redondo"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/llText"
                android:layout_alignParentBottom="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="10"
                    android:background="@drawable/bt_redondo"
                    android:textColor="@color/black_text"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="20"
                    android:background="@drawable/bt_redondo"
                    android:textColor="@color/black_text"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:maxLength="12"
                android:textColor="@color/black_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_electronico"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:maxLength="20"
                android:textColor="@color/black_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_usuario"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@color/black_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_usuario_confirmacion"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@color/black_text"
                />

            <Button
                android:onClick="onClickSiguiente"
                android:id="@+id/btRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/siguiente"
                android:textSize="20sp"
                android:background="@drawable/bt_redondo_morado"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>