<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_fondo_login"
    tools:context=".RegistrarseActivity2">

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/llText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black_text"
                android:layout_gravity="center"
                android:background="@drawable/bt_redondo"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <Button
                android:onClick="onClickElegirFechaNacimiento"
                android:id="@+id/btFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:inputType="textPassword"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="20sp"
                android:textColor="@color/black_text"
                android:background="@drawable/bt_redondo"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_redondo"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/btRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registrarse"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_redondo_morado"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>