<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.perfil">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <FrameLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivFondo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_person_sin"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:transitionName="@string/trastioname_picture"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="140dp"
                    android:src="@drawable/ic_person_gris"
                    app:civ_circle_background_color="@color/black" />





                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="center">

                    <TextView

                        android:layout_marginTop="20dp"
                        android:id="@+id/tvNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreUsuario"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correo"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="7dp"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="13dp"
                            android:layout_gravity="left"

                            />
                        <TextView
                            android:id="@+id/tvTelefono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="xxxxxxx"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="15dp"
                            android:layout_marginLeft="10dp"

                            />
                    </LinearLayout>



                </LinearLayout>


            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvtypeUserPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="13dp" />
                <TextView
                    android:id="@+id/tvNumeroPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15dp" />




            </LinearLayout>



            <TextView
                android:id="@+id/tvIsPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUserPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>